--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi (>=0.128.0,<0.129.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
     "uvicorn (>=0.40.0,<0.41.0)"
 ]
 
@@ -37,4 +38,3 @@ quote-style = "double"
 
 [tool.poetry]
 package-mode = false
-
