feat(module-m): init alembic and initial schema

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@ id_ed25519
 
 # prompts: keep only service-specific prompts; ignore module specs synced from templates
 /prompts/module-*.md
+
+# local databases
+*.db
+*.sqlite
+*.sqlite3
